tests/profile/error/keybinding/missing_guipath.profile
{
  "version": { "major": 12, "minor": 13 },
  "keybindings": [
    {
      "key": "T",
      "documentation": "T documentation",
      "name": "T name",
      "is_local": true,
      "script": "T script"
    }
  ]
}
